--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -16,6 +16,33 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
+    <ion-card>
+        <ion-card-header color="primary">Location Information</ion-card-header>
+        <ion-card-content>
 
+            <address>
+                121, Clear Water Bay Road<br>
+                Clear Water Bay, Kowloon<br>
+                HONG KONG<br>
+                      <ion-icon name='call' item-left>: +852 1234 5678</ion-icon><br>
+                      <ion-icon name='print' item-left>: +852 1234 5678</ion-icon><br>
+                      <ion-icon name='mail' item-left>: confusion@food.net</ion-icon><br>
+             </address>
+        </ion-card-content>
+        <ion-row>
+            <ion-col>
+                <button ion-button icon-left clear small>
+                  <ion-icon name="call"></ion-icon>
+                  <div>Call</div>
+                </button>
+            </ion-col>
+            <ion-col>
+                <button ion-button icon-left clear small>
+                <ion-icon name="mail"></ion-icon>
+                <div>EMAIL</div>
+              </button>
+            </ion-col>
+        </ion-row>
+    </ion-card>
 </ion-content>
