--- a/src/pages/dishdetail/dishdetail.html
+++ b/src/pages/dishdetail/dishdetail.html
@@ -66,5 +66,16 @@
         <h4>{{errMsg}}</h4>
     </div>
 
+    <ion-fab right bottom [hidden]="isFavorite || errMsg">
+        <button ion-fab (click)="addToFavorite()">
+            <ion-icon name="heart-outline"></ion-icon>
+        </button>
+    </ion-fab>
+
+    <ion-fab right bottom *ngIf="isFavorite && dish">
+        <button ion-fab>
+                <ion-icon name="heart"></ion-icon>
+            </button>
+    </ion-fab>
 
 </ion-content>
